2009-03-11 Erwann Chenede - <erwann.chenede@sun.com>

  fix for 1621
  * icons/48x48/places/start-here.png: 48x48 version of the OpenSolaris
    logo
  * icons/48x48/places/Makefile.am : added new icon
  * configure.in : bump version

2009-02-04 Erwann Chenede - <erwann.chenede@sun.com>

  initial implementation of light-nimbus theme.

  * metacity/light-metacity-theme-1.xml : new theme variation 
  * metacity/Makefile.am
  * light-index.theme.in
  * configure.in : bumped to 0.1.2
  * gtk-engine/gtk-2.0/light-gtkrc
  * gtk-engine/gtk-2.0/Makefile.am
  * gtk-engine/nimbus_rc_style.c : added light_theme token and new colors
  * gtk-engine/nimbus_rc_style.h
  * gtk-engine/nimbus_style.c : added light theme switch
  * Makefile.am
  * specs/light/WindowFrame.jpg : designer images and specs
  * specs/light/WindowFrame-Spec2.jpg :
  * specs/light/WindowFrame-Spec1b.jpg

2008-10-15 Erwann Chenede - <erwann.chenede@sun.com>

  * gtk-engine/nimbus_rc_style.c: removed reference to gdk_display_get_default 
    as gtk now initializes it after the theme engine is loaded. fixes 6758256
    Also revert to previous vline color.
  * gtk-engine/nimbus_utils.c: fix spin button rendering error in firefox fixes 6698078
  * configure.in : bumped version to 0.1.1

2008-09-24 Erwann Chenede - <erwann.chenede@sun.com>
  
  * gtk-engine/gtk-2.0/Makefile.am:
  * Makefile.am: don't install dark-* files.

2008-09-19 Erwann Chenede - <erwann.chenede@sun.com>

  * icons/* : more icons for printer and gnome-netstatus
  * metacity/Makefile.am : copy correctly metacity-theme-1.xml
  * gtk-engine/gtk-2.0/gtkrc : fix menu prelight color

2008-09-19 Erwann Chenede - <erwann.chenede@sun.com>

  * icons/* : added new printer and network status icons for nwam project

2008-09-19 Erwann Chenede - <erwann.chenede@sun.com>

  * gtk-engine/gtk-2.0/gtkrc : 
  * gtk-engine/nimbus_rc_style.c : lighten up the default background 
    as requested by Xdesign

2008-09-19 Erwann Chenede - <erwann.chenede@sun.com>
