@@ -1,3 +1,7 @@
+2009-08-28 Erwann Chenede - <erwann.chenede@sun.com>
+
+  * icons/* : added new nwam icons (doo 10942)
+
 2009-03-11 Erwann Chenede - <erwann.chenede@sun.com>
 
   fix for 1621
